--- a/css/style.css
+++ b/css/style.css
@@ -9,13 +9,14 @@ body {
     display: grid;
 }
 
+/* --------------------------------- Grid Container ---------------------------------------- */
 .container {
 	grid-template-columns: repeat(4, 1fr);
 	grid-template-rows: auto;
 
 	grid-template-areas: 
 	  "header header header header"
-	  "boxes boxes boxes boxes"
+	  "box1 box2 box2 box3"
       "content content content sidebar "
       "footer footer footer footer";
 
@@ -23,6 +24,7 @@ body {
 	gap: 10px; 
   }
 
+  /* -------------------------------- Grid Cells ------------------------------------------ */
 
 header {
     border: 1px solid #333;
@@ -31,28 +33,29 @@ header {
 
 }
 
-/*section {
-    border: 1px solid #333;
-	height: 200px;
-    grid-area: boxes;
-}*/
-
+ 
 .box1 {
-    margin: 10px;
 	height: 200px;
-    border: 1px solid #333;
+    width: 60%;
+	border: 1px solid #333;
+	grid-area: box1;
+    justify-self: start;
 }
 
 .box2 {
-    margin: 10px;
 	height: 200px;
+    width: 134%;
     border: 1px solid #333;
+	grid-area: box2;
+    justify-self: center;
 }
 
 .box3 {
-    margin: 10px;
 	height: 200px;
+    width: 60%;
     border: 1px solid #333;
+	grid-area: box3;
+    justify-self: end;
 }
 
 main {
