--- a/css/style.css
+++ b/css/style.css
@@ -237,7 +237,7 @@ footer {
 }
 
 .flex-items {
-    background-color: rgb(241, 225, 194);
+    background-color: rgb(247, 236, 216);
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -287,7 +287,7 @@ footer {
 
 
 .flex-items-aside {
-    background-color: rgb(241, 225, 194);
+    background-color: rgb(247, 236, 216);
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -310,4 +310,31 @@ footer {
 .button8 {
     width: 80%;
     margin: 10px;
+}
+
+
+/* ------------------------- FlexBox Header ------------------------------ */
+
+
+.flex-items-header {
+    background-color: rgb(247, 236, 216);
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.button1 {
+    margin: 20px;
+}
+.button2 {
+    margin: 20px;
+}
+.button3 {
+    margin: 20px;
+}
+.button4 {
+    margin: 20px;
+    margin-left: auto;
 }
