header-flexbox fix done

--- a/css/style.css
+++ b/css/style.css
@@ -230,9 +230,9 @@ footer {
 
 .main {
     display: flex;
-    justify-content: flex-start;
-   /* flex-wrap: wrap;
-    flex-flow: row wrap; */
+    /*justify-content: flex-start;
+    align-items: stretch;*/
+    
     
 }
 
@@ -249,37 +249,37 @@ footer {
 .content1 {
     border: 1px solid #333;
     height: 85px;
-    width: 30%;
+    width: 250px;
 }
 
 .content2 {
     border: 1px solid #333;
     height: 85px;
-    width: 30%;
+    width: 250px;
 }
 
 .content3 {
     border: 1px solid #333;
     height: 85px;
-    width: 30%;
+    width: 250px;
 }
 
 .content4 {
    border: 1px solid #333;
    height: 85px;
-   width: 30%;
+   width: 250px;
 }
 
 .content5 {
     border: 1px solid #333;
     height: 85px;
-    width: 30%;
+    width: 250px;
 }
 
 .content6 {
     border: 1px solid #333;
     height: 85px;
-    width: 30%;
+    width: 250px;
 }
 
 
